--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -29,7 +29,7 @@
       {% endblock %}
     </div>
     <!-- scripts and styles -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
     {% style "/css/screen.css" %}
 
