--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Welcome to noppapeli</title>
+
   </head>
   <body>
     <!-- navbar -->
@@ -30,7 +31,7 @@
     </div>
     <!-- scripts and styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/foundation-icons.css" />
     {% style "/css/screen.css" %}
 
     <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
