Increase font size inside button italics

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,7 +3,11 @@
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Welcome to noppapeli</title>
-
+    <style>
+        .btn i {
+  		    font-size: 3.0em;
+	    }
+    </style>
   </head>
   <body>
     <!-- navbar -->
