--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Welcome to noppapeli</title>
+    <title>The Ultimate Noppapeli</title>
     <style>
         .btn i {
   		    font-size: 3.0em;
@@ -14,7 +14,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{{servlet-context}}/">noppapeli</a>
+          <a class="navbar-brand" href="{{servlet-context}}/">The Ultimate Noppapeli</a>
         </div>
         <div class="navbar-collapse collapse ">
           <ul class="nav navbar-nav">
