--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -4,9 +4,33 @@
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>The Ultimate Noppapeli</title>
     <style>
-        .btn i {
-  		    font-size: 3.0em;
-	    }
+        @media screen and (max-width: 500px) {
+            #header {
+                 display: none;
+            }
+            .score {
+                display: none;
+            }
+
+            .btn i {
+  		        font-size: 1.5em;
+	        }
+
+            .panel i {
+  		        font-size: 1.5em;
+	        }
+        }
+
+        @media screen and (min-width: 501px) {
+            .btn i {
+  		        font-size: 3.0em;
+	        }
+
+            .panel i {
+  		        font-size: 3.0em;
+	        }
+        }
+
     </style>
   </head>
   <body>
