--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,7 +3,7 @@
   <div class="container">
 
   <div class="row">
-       <div class="col-lg-12 text-center">
+       <div class="col-lg-12 text-center" id="header">
              <h1>The Ultimate Noppapeli</h1>
        </div>
        <div id="content"></div>
